Progression 0.4.0
  Added On Eaten Trigger
  Can drag the mouse to scroll through the tree editor
  Only display links when criteria are in the same tab
  Speed will now work on negative speeds, as well as not require sprint pressing
  Add two booleans to speed, whether it affects land or water speed

Progression 0.3.6
  Fix saving of items with nbt
  Move some things from options to criteria.json where it applies
  Make Obtain trigger check every 1 and a half seconds instead of every tick
  Allow changing of the item to to open the gui
  Fix Potential crash when rendering criteria
  More reliably add inventory items to the item selector

Progression 0.3.5
  Mods will now bypass the system if there isn't support for them added, instead of not working
  Add Support for Forestry Worktable
  Add Support for Autopackager mod
  Fix Potential crash with Obtain Trigger

Progression 0.3.4
  Fix Potential crash when rendering certain entities in the editor

Progression 0.3.3
  Fix Crash when using the points trigger
  Fix Triggers sometimes firing more than once
  Fix some ordering issues, meaning not everything would fire correctly
  Fix resetting of player data in survival when opening the book
  Fix potential crash when saving json, due to a corrupted criteria
  Shuffle Trigger fire order

Progression 0.3.2
  IMPORTANT:
  Added two config options for 'unclaimed' tile entities in the config
    Whether or not unclaimed tile entities can craft anything - defaults to false
    Whether or not unclaimed tile entities can use anything for crafting = defaults to true
  If a tile is unclaimed (aka placed before progression is installed) then it will default to these options.
  The default means that noone can craft anything with a furnace made before the mod is installed. (Until they replace it, or claim it).
  The mod needs to know who placed the block, in order to perform it's craft locking actions.
  END IMPORTANT:
  