@@ -26,6 +26,7 @@ import joshie.progression.network.PacketSyncTriggers;
 import joshie.progression.network.PacketSyncTriggers.SyncPair;
 import joshie.progression.player.nbt.CriteriaNBT;
 import joshie.progression.player.nbt.TriggerNBT;
+import joshie.progression.player.nbt.UnclaimedNBT;
 import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.entity.player.EntityPlayerMP;
 import net.minecraft.nbt.NBTTagCompound;
@@ -43,6 +44,7 @@ public class CriteriaMappings {
     protected HashMap<Criteria, Integer> completedCritera = new HashMap(); //All the completed criteria, with a number for how many times repeated
     protected Set<Trigger> completedTriggers = new HashSet(); //All the completed trigger, With their unique name as their identifier, Persistent
     protected HashMap<Trigger, ITriggerData> triggerData = new HashMap(); //Unique String > Data mappings for this trigger
+    protected Set<Criteria> unclaimed = new HashSet();
 
     //Generated by the remapping
     protected Multimap<String, Trigger> activeTriggers; //List of all the active triggers, based on their trigger type
@@ -76,6 +78,7 @@ public class CriteriaMappings {
 
     //Reads the completed criteria
     public void readFromNBT(NBTTagCompound nbt) {
+        NBTHelper.readTagCollection(nbt, "Unclaimed Criteria", UnclaimedNBT.INSTANCE.setCollection(unclaimed));
         NBTHelper.readTagCollection(nbt, "Completed Triggers", TriggerNBT.INSTANCE.setCollection(completedTriggers));
         NBTHelper.readMap(nbt, "Completed Criteria", CriteriaNBT.INSTANCE.setMap(completedCritera));
         NBTTagList data = nbt.getTagList("Active Trigger Data", 10);
@@ -94,6 +97,7 @@ public class CriteriaMappings {
     }
 
     public NBTTagCompound writeToNBT(NBTTagCompound nbt) {
+        NBTHelper.writeCollection(nbt, "Unclaimed Criteria", UnclaimedNBT.INSTANCE.setCollection(unclaimed));
         NBTHelper.writeCollection(nbt, "Completed Triggers", TriggerNBT.INSTANCE.setCollection(completedTriggers));
         NBTHelper.writeMap(nbt, "Completed Criteria", CriteriaNBT.INSTANCE.setMap(completedCritera));
         //Save the extra data for the existing triggers
@@ -156,6 +160,17 @@ public class CriteriaMappings {
             return data;
         } else return data;
     }
+    
+    public void claimUnclaimedReward(Criteria criteria) {
+        if (unclaimed.contains(criteria)) {
+            unclaimed.remove(criteria);
+            for (Reward reward : criteria.rewards) {
+                reward.getType().reward(uuid);
+            }
+            
+            Progression.data.markDirty();
+        }
+    }
 
     /** Called to fire a trigger type, Triggers are only ever called on criteria that is activated **/
     public boolean fireAllTriggers(String type, Object... data) {
@@ -171,7 +186,7 @@ public class CriteriaMappings {
             for (Reward reward : rewards) {
                 reward.getType().reward(uuid);
             }
-            
+
             remapStuff(forRemovalFromActive, toRemap);
             Progression.data.markDirty();
             return true;
@@ -257,9 +272,11 @@ public class CriteriaMappings {
         remapStuff(forRemovalFromActive, toRemap);
         //Now that we have removed all the triggers, and marked this as completed and remapped data, we should give out the rewards
         for (Criteria criteria : toComplete) {
-            for (Reward reward : criteria.rewards   ) {
-                reward.getType().reward(uuid);
-            }
+            if (!criteria.mustClaim) {
+                for (Reward reward : criteria.rewards) {
+                    reward.getType().reward(uuid);
+                }
+            } else unclaimed.add(criteria);
         }
 
         //Mark data as dirty, whether it changed or not
